Add base styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
-:root {
-	font-size: 16px;
+@import
+	'variables',
+	'layout',
+	'typography',
+	'buttons',
+	'media';
+
+* { box-sizing: border-box; }
 }
