--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -39,6 +39,7 @@
 
 		h1 {
 			position: absolute;
+			margin: 0;
 			color: var(--text-color);
 			text-shadow: 0 0 70px #fff;
 
@@ -46,10 +47,10 @@
 				left: 50%;
 				transform: translateX(-50%);
 			}
-			&.top { top: -0.8em; }
+			&.top { top: -0.5em; }
 			&.right { right: -0.5em; }
 			&.left { left: -0.5em; }
-			&.bottom { bottom: -0.75em; }
+			&.bottom { bottom: -0.5em; }
 			&.vertical { writing-mode: vertical-lr; }
 			&.left.vertical { transform: rotate(180deg); }
 
@@ -69,12 +70,15 @@
 	}
 
 	.nav-about {
-		grid-area: 1 / 3 / span 4 / span 4;
+		grid-area: 2 / 3 / span 3 / span 3;
+
+		figure img { object-fit: scale-down; }
 
 		h1 {
 			top: 50%;
 			left: 100%;
-			transform: translate(30px, -50%);
+			padding-left: 0.5em;
+			transform: translateY(-50%);
 		}
 	}
 
