Add (partial) Rescue safety view
[!] CSS Layout needs an urgent refactory to simplify markup.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@
 	--color-dark: #2d2c2f;
 	--color-light: #fff;
 	--color-primary: #7cb46c;
-	--color-alert: #f65;
+	--color-alert: #c23b22;
 
 	// SIZE
 	font-size: 18px;
