Fix Safety views
Use improvements in layout and blocks.

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -5,6 +5,8 @@ figure {
 	margin: var(--spacing);
 
 	img { display: block; }
+
+	figcaption { opacity: 0.5; }
 }
 
 figure.attribution figcaption {
