--- a/src/styles/layout/_list.scss
+++ b/src/styles/layout/_list.scss
@@ -1,13 +1,15 @@
-.list {
+.grid-list {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	margin: 0 var(--spacing);
+	margin: var(--spacing);
 
 	li {
 		flex: 1;
-		margin: var(--spacing) 0;
+		margin: var(--spacing);
 	}
+
+	&--2 li { flex-basis: calc(50% - 2 * var(--spacing)); }
 
 	&--bignum {
 		counter-reset: list-counter;
@@ -15,8 +17,8 @@
 		li {
 			box-sizing: border-box;
 			position: relative;
-			padding: var(--spacing) var(--spacing) 0;
-			margin-top: calc(2 * var(--spacing));
+			padding: 4rem var(--spacing) 0;
+			// margin-top: calc(2 * var(--spacing));
 
 			&::before {
 				counter-increment: list-counter;
@@ -32,6 +34,4 @@
 			}
 		}
 	}
-
-	&--grid li { flex-basis: 50%; }
 }
