--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -1,25 +1,3 @@
-.nav-locales {
-	display: flex;
-	position: absolute;
-	right: 0;
-
-	button {
-		appearance: none;
-		border: 0;
-		font: inherit;
-		background: transparent;
-		text-transform: uppercase;
-		height: var(--size-touch);
-		padding: 0 0.75rem;
-		opacity: 0.25;
-
-		&.is-active {
-			opacity: 1;
-			font-weight: bold;
-		}
-	}
-}
-
 .nav-grid {
 	height: 100%;
 	display: grid;
@@ -90,10 +68,10 @@
 	.nav-kids { grid-area: 32 / 14 / span 5 / span 10; }
 }
 
-.nav-sec {
+.nav-bar {
 	display: flex;
 	justify-content: center;
-	margin-bottom: var(--spacing);
+	margin: var(--spacing);
 
 	a {
 		line-height: var(--size-touch);
@@ -118,6 +96,28 @@
 			opacity: 1;
 
 			&::after { width: 100%; }
+		}
+	}
+}
+
+.nav-locales {
+	display: flex;
+	position: absolute;
+	right: 0;
+
+	button {
+		appearance: none;
+		border: 0;
+		font: inherit;
+		background: transparent;
+		text-transform: uppercase;
+		height: var(--size-touch);
+		padding: 0 0.75rem;
+		opacity: 0.25;
+
+		&.is-active {
+			opacity: 1;
+			font-weight: bold;
 		}
 	}
 }
