--- a/src/styles/layout/_columns.scss
+++ b/src/styles/layout/_columns.scss
@@ -1,9 +1,14 @@
 .columns {
 	display: flex;
-	margin: 0 calc(-1 * var(--spacing));
 
-	& > * {
+	&:not(section) { margin: 0 calc(-1 * var(--spacing)); }
+
+	.column {
 		flex: 1;
 		margin: 0 var(--spacing);
+
+		&--2 { flex: 2; }
+		&--3 { flex: 3; }
+		&--4 { flex: 4; }
 	}
 }
