--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -47,3 +47,14 @@ section[data-tag-pre] {
 	}
 	&::after { display: none; }
 }
+
+section[data-tag-pre].reverse {
+	padding-right: calc(2.5 * var(--spacing));
+	padding-left: 0;
+
+	&::before {
+		left: auto;
+		right: 0;
+		transform: none;
+	}
+}
