Add Thunderstorm safety view

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 	--color-dark: #2d2c2f;
 	--color-light: #fff;
 	--color-primary: #7cb46c;
+	--color-success: #7d7;
 	--color-alert: #c23b22;
 
 	// SIZE
