--- a/src/styles/views/_safety.scss
+++ b/src/styles/views/_safety.scss
@@ -65,3 +65,22 @@
 	26.25% { transform: scale(1.5); }
 	27.5% { transform: scale(1); }
 }
+
+// HYPOTHERMIA
+.hypothermia-animation {
+
+	section { margin-top: 0; }
+
+	.symptoms {
+		margin-bottom: auto;
+		font-size: 1.5em;
+
+		li { margin: 1.2em 2em; }
+	}
+
+	.temperature {
+		font-size: 6rem;
+		text-align: center;
+		margin: 0.75em 0;
+	}
+}
