--- a/src/styles/layout/_card.scss
+++ b/src/styles/layout/_card.scss
@@ -3,7 +3,7 @@
 	appearance: none;
 	position: relative;
 	display: block;
-	padding: 6rem 80px;
+	padding: 5rem 3.6rem;
 	background: transparent;
 	vertical-align: top;
 	font-size: var(--l);
@@ -21,8 +21,8 @@
 		mask-image: linear-gradient(to bottom, #0008 0%, #000 30%);
 	}
 
-	h4 {
-		margin: -0.5em;
+	h5 {
+		margin: -0.5em 0 0 -0.5em;
 		position: absolute;
 		top: 0;
 		left: 0;
