Add selected trail description pane
Pane includes trail description, profiles and seasonality (with a Timeline component)

--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -1,5 +1,15 @@
 .map {
 	height: 100%;
+	position: relative;
+}
+
+.map-pane {
+	position: absolute;
+	top: 0;
+	left: 0;
+	max-width: 40%;
+	margin: var(--spacing);
+	z-index: 999;
 }
 
 .explore-route {
