--- a/src/styles/views/_explore.scss
+++ b/src/styles/views/_explore.scss
@@ -17,3 +17,20 @@
 		box-shadow: 0 0 1.5em 2em #fff;
 	}
 }
+
+// Profiles list & icons
+.profiles {
+	display: flex;
+	font-size: var(--s);
+
+	li {
+		text-align: center;
+		margin: 0 var(--s);
+	}
+
+	img {
+		display: block;
+		margin: 0 auto var(--xs);
+		height: var(--xxxl);
+	}
+}
