Add advanced filters

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 	'layout',
 	'typography',
 	'buttons',
+	'forms',
 	'media';
 @import
 	'components/map',
@@ -14,3 +15,16 @@
 	'views/not-found';
 
 * { box-sizing: border-box; }
+
+section {
+	// background: #f001;
+}
+
+img,
+.card,
+.btn,
+iframe,
+figure,
+.map {
+	// border-radius: 5px;
+}
