--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -1,3 +1,16 @@
+.range {
+	margin: var(--s) 0;
+	padding: var(--xs) 0;
+
+	legend { @extend h5; }
+
+	em {
+		display: block;
+		text-align: right;
+		margin: -2em 0 1em;
+	}
+}
+
 .picker {
 	margin: var(--s) 0;
 	padding: var(--xs) 0;
@@ -29,4 +42,15 @@
 	}
 
 	input[type=radio] { border-radius: 50%; }
+}
+
+.slider {
+	&-target { margin: 1.5em 0 0; }
+	&-base { background: #0001; }
+	&-connect { background: var(--color-primary); }
+
+	&-handle {
+		transform: scale(1.5);
+		box-shadow: 0 0 0 3px var(--color-primary);
+	}
 }
