--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -21,11 +21,13 @@
 	label {
 		display: flex;
 		align-items: center;
+		padding: 0.5em 0;
 	}
 
 	input {
 		margin-right: 1em;
 		appearance: none;
+		flex: 0 0 1.5em;
 		width: 1.5em;
 		height: 1.5em;
 		border: 1px solid #8888;
