--- a/src/styles/views/_explore.scss
+++ b/src/styles/views/_explore.scss
@@ -1,24 +1,45 @@
 // Trails scroller
 .trails {
-	min-height: 11rem;
+	min-height: 13rem;
 
-	li {
+	.card {
 		transition: all 0.5s ease;
-		padding: 5rem 3.75rem;
-	}
+		height: 12rem;
+		flex: 0 0 9rem;
 
-	&.selected li:not(.selected) {
-		opacity: 0.2;
-		filter: saturate(0.25);
-	}
+		& + .card { margin-left: 2rem; }
 
-	li.selected {
-		background: #fff;
-		position: sticky;
-		left: 1em;
-		right: 1em;
-		z-index: 10;
-		box-shadow: 0 0 1.5em 2em #fff;
+		&.active {
+			background: #fff;
+			position: sticky;
+			left: 1em;
+			right: 1em;
+			z-index: 10;
+			box-shadow: 0 0 1.5em 2em #fff;
+		}
+
+		&.inactive {
+			opacity: 0.2;
+			filter: saturate(0.25);
+		}
+
+		.stats {
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			box-sizing: border-box;
+			color: #fff;
+			padding: var(--s);
+			font-size: var(--l);
+			display: flex;
+			justify-content: space-around;
+			background: linear-gradient(to bottom, #0000 0%, #0008 100%);
+
+			em {
+				display: block;
+				font-size: var(--s);
+			}
+		}
 	}
 }
 
