Add elevation chart

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,8 @@
 @import
 	'components/map',
 	'components/timeline',
-	'components/image-markers';
+	'components/image-markers',
+	'components/elevation';
 @import
 	'views/safety',
 	'views/explore',
