--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -8,4 +8,6 @@
 	stroke-width: 5;
 }
 
+.map-compare-thumb { background-color: var(--color-dark); }
+
 @keyframes trace-path { to { stroke-dashoffset: 0; } }
