Add TrailSheet background
Sheet is unreadable when satellite map if background is transparent

--- a/src/styles/views/_explore.scss
+++ b/src/styles/views/_explore.scss
@@ -52,9 +52,11 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	max-width: 45%;
-	margin: var(--xxl);
+	max-width: 53%;
+	margin: var(--m);
 	z-index: 500;
+	background: #fffa;
+	padding: var(--l) var(--xxl);
 }
 
 // Profiles list & icons
