--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -8,6 +8,9 @@
 	stroke-width: 5;
 }
 
-.map-compare-thumb { background-color: var(--color-dark); }
+.map-compare-thumb {
+	background-color: var(--color-dark);
+	.map-compare-end & { box-shadow: 0 0 0 1rem #0004; }
+}
 
 @keyframes trace-path { to { stroke-dashoffset: 0; } }
