--- a/src/styles/layout/_card.scss
+++ b/src/styles/layout/_card.scss
@@ -7,6 +7,7 @@
 	vertical-align: top;
 	margin: 0.75rem 0 0;
 	z-index: 0;
+	border-radius: var(--border-radius);
 
 	figure {
 		position: absolute;
