--- a/src/styles/layout/_scroller.scss
+++ b/src/styles/layout/_scroller.scss
@@ -1,6 +1,7 @@
 .scroller {
 	overflow: auto;
 	display: flex;
+	border-radius: var(--border-radius);
 	-ms-overflow-style: none;  /* IE and Edge */
 	scrollbar-width: none;  /* Firefox */
 	&::-webkit-scrollbar { display: none; }
