--- a/src/styles/views/_explore.scss
+++ b/src/styles/views/_explore.scss
@@ -43,6 +43,7 @@
 			width: 100%;
 			color: #fff;
 			background: linear-gradient(to bottom, #0000 0%, #0008 100%);
+			border-radius: var(--border-radius);
 		}
 	}
 }
@@ -57,6 +58,7 @@
 	z-index: 500;
 	background: #fffa;
 	padding: var(--l) var(--xxl);
+	border-radius: var(--border-radius);
 }
 
 // Profiles list & icons
