--- a/src/styles/layout/_scroller.scss
+++ b/src/styles/layout/_scroller.scss
@@ -2,6 +2,8 @@
 	overflow: auto;
 	display: flex;
 	border-radius: var(--border-radius);
+	position: relative;
+	min-width: 0;
 	-ms-overflow-style: none;  /* IE and Edge */
 	scrollbar-width: none;  /* Firefox */
 	&::-webkit-scrollbar { display: none; }
