Add proper typography

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&family=Roboto:wght@300&display=swap');
+
 :root {
 	// COLOR
 	--color-dark: #2d2c2f;
@@ -26,7 +28,7 @@
 	--text-size: 18px;
 	--text-color: var(--color-dark);
 	--text-family: 'Roboto';
-	--text-family--title: 'Futura';
+	--text-family--title: 'Jost';
 
 	// BUTTON
 	--button-padding: 1.5rem;
