--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -2,7 +2,7 @@
 
 .animate-in,
 .animate-out {
-	animation: var(--animate-animation) 0.5s var(--animate-delay) ease-out both;
+	animation: var(--animate-animation) 0.5s var(--animate-delay) ease-out var(--animate-fill);
 
 	&[data-tag],
 	&[data-tag-pre] {
@@ -10,10 +10,13 @@
 
 		&::before,
 		&::after {
-			animation: var(--animate-animation) 0.5s var(--animate-delay) ease-out both;
+			animation: var(--animate-animation) 0.5s var(--animate-delay) ease-out var(--animate-fill);
 		}
 	}
 }
+
+.animate-in { --animate-fill: backwards; }
+.animate-out { --animate-fill: forwards; }
 
 // FADE transition ----------------------------
 @keyframes fade-in {
