Fix undesired outlines
Outline removal is considered a usability no-no, arguing people navigation with keyboard won't know where the pointer is. But touchscreens will never be navigated with keyboard!

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,9 @@
 	'views/not-found';
 
 * { box-sizing: border-box; }
+
+::-moz-focus-inner,
+::-moz-focus-outer { border: 0; }
+
+:focus,
+:active { outline: 0; }
