Adjust fade slide offset to fixed value

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -34,4 +34,7 @@
 	--button-padding: 1.5rem;
 	--button-bg-color: var(--color-dark);
 	--button-text-color: var(--color-light);
+
+	// ANIMATIONS
+	--fade-offset: 1rem;
 }
