Encapsulate component style inside vue file
SFC must contain its own style (parametrizable by css variables? maybe)

Leave .map as a CSS component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,10 +6,7 @@
 	'forms',
 	'media';
 @import
-	'components/map',
-	'components/timeline',
-	'components/image-markers',
-	'components/elevation';
+	'components/map';
 
 * { box-sizing: border-box; }
 
