--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -2,16 +2,17 @@
 	height: 100%;
 	position: relative;
 	border-radius: var(--border-radius);
-}
 
-.explore-route {
-	stroke: var(--color-primary);
-	stroke-width: 5;
-}
+	&-compare-thumb {
+		background-color: var(--color-dark);
 
-.map-compare-thumb {
-	background-color: var(--color-dark);
-	.map-compare-end & { box-shadow: 0 0 0 1rem #0004; }
+		.map-compare-end & { box-shadow: 0 0 0 1rem #0004; }
+	}
+
+	.route {
+		stroke: var(--color-primary);
+		stroke-width: 5;
+	}
 }
 
 @keyframes trace-path { to { stroke-dashoffset: 0; } }
