--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -1,11 +1,11 @@
 @import
+	'nav-bar',
 	'section',
 	'box',
 	'columns',
 	'blocks',
 	'list',
 	'scroller',
-	'card',
 	'tooltip',
 	'shadow',
 	'navigation',
