--- a/src/styles/layout/_blocks.scss
+++ b/src/styles/layout/_blocks.scss
@@ -1,9 +1,11 @@
+// CUSTOM STYLED VIDEO BLOCK --------------------------------
 .block-video {
 	padding-left: 6rem !important;
 
 	h1 { margin: 0 0 -0.5em -0.5em; }
 }
 
+// CUSTOM STYLED IMAGE BLOCK --------------------------------
 .block-image {
 	display: flex;
 	padding: 2rem;
