--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -1,3 +1,4 @@
+// MAIN NAVIGATION GRID --------------------------------
 .nav-grid {
 	height: 100%;
 	display: grid;
@@ -68,47 +69,7 @@
 	.nav-play { grid-area: 32 / 14 / span 5 / span 10; }
 }
 
-.nav-bar {
-	display: flex;
-	justify-content: center;
-	white-space: nowrap;
-	margin: var(--spacing);
-
-	label + label,
-	li + li { margin-left: 2em; }
-
-	input { display: none; }
-
-	a,
-	span {
-		line-height: var(--size-touch);
-		text-transform: uppercase;
-		opacity: 0.4;
-		text-align: center;
-		color: inherit;
-		transition: all 0.5s ease;
-		font-weight: bold;
-		display: block;
-
-		&::after {
-			content: '';
-			display: block;
-			height: 2px;
-			width: 0;
-			background: currentColor;
-			transition: inherit;
-			margin: 0 auto;
-		}
-	}
-
-	input:checked + span,
-	a.router-link-exact-active {
-		opacity: 1;
-
-		&::after { width: 100%; }
-	}
-}
-
+// LOCALES NAVIGATION --------------------------------
 .nav-locales {
 	display: flex;
 	position: absolute;
