--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -14,11 +14,13 @@
 .picker {
 	margin: var(--s) 0;
 	padding: var(--xs) 0;
-	column-count: 3;
+	display: flex;
+	flex-wrap: wrap;
 
 	legend { @extend h5; }
 
 	label {
+		flex: 1 1 30%;
 		display: flex;
 		align-items: center;
 		padding: 0.5em 0;
