--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -31,6 +31,7 @@
   padding: var(--spacing);
   user-select: none;
   counter-reset: counter__section;
+  overflow: hidden;
 
   &__header {
     display: flex;
