feat: Add commitment section

--- a/src/styles/layout/_blocks.scss
+++ b/src/styles/layout/_blocks.scss
@@ -29,9 +29,11 @@
   }
 
   .box { margin: var(--spacing) 0 -5rem -7rem; }
+}
 
-  &.reverse {
-    flex-direction: row-reverse !important;
-    text-align: right;
-  }
+.block-image.reverse {
+  flex-direction: row-reverse !important;
+  text-align: right;
+
+  .box { margin : var(--spacing) -7rem -5rem 0; }
 }
