--- a/src/styles/layout/_list.scss
+++ b/src/styles/layout/_list.scss
@@ -54,6 +54,11 @@
     &--success { color: var(--color-success); }
     &--alert { color: var(--color-alert); }
   }
+
+  .reverse & {
+    li { flex-direction: row-reverse; }
+    .icon { margin: 0 0 0 0.75em; }
+  }
 }
 
 // LIST IN COLUMNS ------------------------------------
