--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -2,7 +2,7 @@
   margin: var(--s) 0;
   padding: var(--xs) 0;
 
-  legend { @extend h5; }
+  legend { @extend %h5; }
 
   em {
     display: block;
@@ -17,7 +17,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  legend { @extend h5; }
+  legend { @extend %h5; }
 
   label {
     flex: 1 1 30%;
@@ -45,7 +45,7 @@
     }
   }
 
-  input[type=radio] { border-radius: 50%; }
+  input[type='radio'] { border-radius: 50%; }
 }
 
 .slider {
