--- a/src/styles/layout/_scroller.scss
+++ b/src/styles/layout/_scroller.scss
@@ -33,3 +33,8 @@
     &::after { display: none; }
   }
 }
+
+.growable {
+  transition: transform 0.5s ease;
+  transform: scale(calc(0.25 + (var(--grow, 1) * 0.75)));
+}
